# Easy-Virtual-Display

./: .gitattributes  .gitignore  Easy-Virtual-Display.sln  README.md  README.zh-CN.md  components.json  main.cpp  package-lock.json  package.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
native/EasyVirtualDisplay.Host/: EasyVirtualDisplay.Host.csproj  Program.cs
native/EasyVirtualDisplay.Host/Cli/: AdminCli.cs
native/EasyVirtualDisplay.Host/Errors/: HostError.cs  HostErrorMapper.cs
native/EasyVirtualDisplay.Host/Hosting/: HostJsonOptions.cs  StdioHost.cs
native/EasyVirtualDisplay.Vdd/: EasyVirtualDisplay.Vdd.csproj
native/EasyVirtualDisplay.Vdd.Tests/: ContractMapperTests.cs  EasyVirtualDisplay.Vdd.Tests.csproj  HostErrorMapperTests.cs  HostSnapshotFingerprintTests.cs  VddConfigurationServiceTests.cs
native/EasyVirtualDisplay.Vdd/Domain/: Contracts.cs  Display.cs  Errors.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  contracts.rs  drivers.rs  elevator.rs  errors.rs  events.rs  install_prompt.rs  lib.rs  main.rs  quit.rs  settings_store.rs  shell_locales.rs  tray.rs
src-tauri/src/boundaries/: fallback_display.rs  keep_screen_on.rs  launch_on_login.rs  mod.rs
src-tauri/src/host/: mod.rs  resolver.rs  state.rs  stderr_ring.rs
src-tauri/windows/: hooks.nsh
src/renderer/: App.tsx  env.d.ts  i18n.ts  index.html  main.tsx
src/renderer/__tests__/: App.test.tsx  setup.ts  (+11 more)
src/shared/: bridge.ts  contracts.ts  errors.ts  index.ts  ipc.ts
(+50 files in other folders)
