[package]
name = "easy-virtual-display"
version = "0.1.1"
description = "Easy Virtual Display desktop shell"
authors = ["EasyVirtualDisplay"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "easy_virtual_display_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
thiserror = "1"
once_cell = "1"
regex = "1"
sys-locale = "0.3"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power", "Win32_Foundation"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
